--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Products/Create.cshtml
@@ -36,26 +36,8 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreateByUserId" class="control-label"></label>
-                <input asp-for="CreateByUserId" class="form-control" />
-                <span asp-validation-for="CreateByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateData" class="control-label"></label>
-                <input asp-for="CreateData" class="form-control" />
-                <span asp-validation-for="CreateData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteByUserId" class="control-label"></label>
-                <input asp-for="DeleteByUserId" class="form-control" />
-                <span asp-validation-for="DeleteByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteData" class="control-label"></label>
-                <input asp-for="DeleteData" class="form-control" />
-                <span asp-validation-for="DeleteData" class="text-danger"></span>
-            </div>
+          
+           
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -92,7 +74,7 @@
             fontSize: '55px',
             plusInnerHtml: '',
             plusBtnClass: undefined
-            // cox sekil getirmek ucun yazilmis js ve css aagdakdir;
+            // cox sekil getirmek ucun yazilmis js ve css aagdakdir;(multiple-image-js)
         });
     </script>
 }
