--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
                         <img src="~/uploads/images/menu-icon/Mail_Box.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Contactpost</span>
+                        <span>@Sidebar.ContactPosts</span>
                     </div>
                 </a>
             </li>
@@ -99,7 +99,7 @@
                         <img src="~/uploads/images/menu-icon/Mail_Box.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Form</span>
+                        <span>@Sidebar.Form</span>
                     </div>
                 </a>
             </li>
@@ -122,7 +122,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Chat</span>
+                        <span>@Sidebar.Chat</span>
                     </div>
                 </a>
             </li>
@@ -134,7 +134,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Brands</span>
+                        <span>@Sidebar.Brends</span>
                     </div>
                 </a>
             </li>
@@ -145,7 +145,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>ProductColors</span>
+                        <span>@Sidebar.Colors</span>
                     </div>
                 </a>
             </li>
@@ -156,7 +156,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>ProductSizes</span>
+                        <span>@Sidebar.Sizes</span>
                     </div>
                 </a>
             </li>
@@ -166,7 +166,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Category</span>
+                        <span>@Sidebar.Category</span>
                     </div>
                 </a>
             </li>
@@ -177,7 +177,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Product</span>
+                        <span>@Sidebar.Product</span>
                     </div>
                 </a>
             </li>
@@ -188,7 +188,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Fak</span>
+                        <span>@Sidebar.Faqs</span>
                     </div>
                 </a>
             </li>
@@ -198,7 +198,7 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Blogs</span>
+                        <span>@Sidebar.Blogs</span>
                     </div>
                 </a>
             </li>
