--- a/HomeWork-WebUI/Riode.WebUI/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                         <span class="divider"></span>
                         <a asp-controller="home" asp-action="contact" class="contact d-lg-show"><i class="d-icon-map"></i>Contact</a>
                         <a href="#" class="help d-lg-show"><i class="d-icon-info"></i> Need Help</a>
-                        <a class="login-link" href="ajax/login.html" data-toggle="login-modal">
+                        <a class="login-link" asp-controller="MyAccount" asp-action="SingIn" asp-area="" >
                             <i class="d-icon-user"></i>Sign in
                         </a>
                         <span class="delimiter">/</span>
