--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Create.cshtml
@@ -17,8 +17,12 @@
 
 
         <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Parent</span>
-            <input type="text" class="form-control" asp-for="ParentId" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <label class="col-sm-2 col-form-label" asp-for="Parent"></label>
+            <div class="col-sm-10">
+                <select asp-for="ParentId" asp-items="@ViewBag.ParentId" class="form-control" >
+                    <option selected disabled>secim</option>
+                </select>
+            </div>
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
