--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -5,4 +5,8 @@
 @using Riode.WebUI.Model.Entity.ViewModels
 
 @using  Riode.WebUI.Appcode.Application.BrandsModelu
+@using Riode.WebUI.Appcode.Application.ProductSizeModelu
 @using Resources;
+@using Riode.WebUI.Appcode.Application.BlogsModelu
+
+@using Riode.WebUI.Model.Entity.FormModels
