--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riode.WebUI.Model.Entity.Blog
+﻿@model BlogsCreateComman
 
 @{
     ViewData["Title"] = "Create";
@@ -25,10 +25,7 @@
                             <textarea asp-for="Body" class="form-control"></textarea>
                             <span asp-validation-for="Body" class="text-danger"></span>
                         </div>
-                        <div class="input-group mb-3">
-                            <span class="input-group-text" id="inputGroup-sizing-default">PublishedDate</span>
-                            <input type="text" class="form-control" asp-for="PublishedDate" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                        </div>
+                     
                         <div class="form-group col-12">
 
                             <label class="control-label">
