--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Index.cshtml
@@ -1,62 +1,67 @@
-﻿@model IEnumerable<Riode.WebUI.Model.Entity.ProductSize>
+﻿@model PagedViewModel<Riode.WebUI.Model.Entity.ProductSize>
+    
+        @{
+            ViewData["Title"] = "Index";
+        }
 
-@{
-    ViewData["Title"] = "Index";
-}
-
-<div style="display:flex">
-    <h1>Product Size</h1>
-
-
+<div>
+    @Model.GetPagenation(Url, "index", "Admin")
 </div>
-<a style="margin-left:15px" class="btn btn-warning">Brands Count:@ViewBag.Count</a>
-<div class="col-8">
-    <table class="table table-striped" border="1">
-        <thead>
-            <tr>
-                <th>Abbr</th>
-                <th scope="col">Name</th>
-                <th scope="col">CreateData</th>
-                <th>
-                    <a class="btn btn-success" asp-action="Create">
-                        <i class="fas fa-plus"></i>
-                        Create New
-                    </a>
+
+        <div style="display:flex">
+            <h1>Product Size</h1>
+
+
+        </div>
+        <a style="margin-left:15px" class="btn btn-warning">Brands Count:@ViewBag.Count</a>
+        <div class="col-8">
+            <table class="table table-striped" border="1">
+                <thead>
+                    <tr>
+                        <th>Abbr</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">CreateData</th>
+                        <th>
+                            <a class="btn btn-success" asp-action="Create">
+                                <i class="fas fa-plus"></i>
+                                Create New
+                            </a>
 
 
 
 
-                </th>
+                        </th>
 
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <th>@item.Abbr</th>
-                    <td>@item.Name</td>
-                    <td> @item.CreateData</td>
-                    <td>
-                        <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">
-                        <i class="fas fa-pencil-alt"></i>
-                        Edit</a>
-                        <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">
-                            <i class="fas fa-eye"></i>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model.Items)
+                    {
+                        <tr>
+                            <th>@item.Abbr</th>
+                            <td>@item.Name</td>
+                            <td> @item.CreateData</td>
+                            <td>
+                                <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">
+                                    <i class="fas fa-pencil-alt"></i>
+                                    Edit
+                                </a>
+                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">
+                                    <i class="fas fa-eye"></i>
 
-                            Details
-                        </a>
+                                    Details
+                                </a>
 
 
-                        <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">
-                            <i class="fas fa-trash-alt"></i>
+                                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">
+                                    <i class="fas fa-trash-alt"></i>
 
-                            Delete
-                        </a>
-                    </td>
+                                    Delete
+                                </a>
+                            </td>
 
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
