--- a/HomeWork-WebUI/Riode.WebUI/Views/MyAccount/SingIn.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/MyAccount/SingIn.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿ @model LoginFormModel
 @{
     ViewData["Title"] = "SingIn";
 }
@@ -27,12 +27,22 @@
                     </ul>
                     <div class="tab-content">
                         <div class="tab-pane active" id="signin">
-                            <form action="#">
+                            <form method="post">
                                 <div class="form-group mb-3">
-                                    <input type="text" class="form-control" id="singin-email" name="singin-email" placeholder="Username or Email Address *" required />
+                                    <input type="text"
+                                           asp-for="UserName"
+                                           class="form-control"
+                                           id="singin-email" 
+                                 
+                                           placeholder="Username or Email Address *"
+                                           required />
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" id="singin-password" name="singin-password" placeholder="Password *"
+                                    <input type="password"
+                                            asp-for="Password"
+                                           class="form-control"
+                                           id="singin-password" 
+                                           placeholder="Password *"
                                            required />
                                 </div>
                                 <div class="form-footer">
