--- a/HomeWork-WebUI/Riode.WebUI/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
                             <i class="d-icon-user"></i>Sign in
                         </a>
                         <span class="delimiter">/</span>
-                        <a class="register-link ml-0" href="ajax/login.html" data-toggle="login-modal">Register</a>
+                        <a  asp-controller="MyAccount" asp-action="Registir" >Register</a>
                         <!-- End of Login -->
                     </div>
                 </div>
