--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Questions/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Questions/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riode.WebUI.Model.Entity.Questions
+﻿@model QuestionCreateCommand
 
 @{
     ViewData["Title"] = "Create";
@@ -18,28 +18,13 @@
 
         <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Question</span>
-            <input type="text" class="form-control" asp-for="Question" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <input type="text" class="form-control" asp-for="Questions" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
         <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Answer</span>
             <input type="text" class="form-control" asp-for="Answer" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">CreateByUserId</span>
-            <input type="text" class="form-control" asp-for="CreateByUserId" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">CreateData</span>
-            <input type="date" class="form-control" asp-for="CreateData" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">DeleteByUserId</span>
-            <input type="text" class="form-control" asp-for="DeleteByUserId" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-        </div>
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">DeleteData</span>
-            <input type="date" class="form-control" asp-for="DeleteData" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-        </div>
+      
 
 
         <button type="submit" class="btn btn-outline-success">
