--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -10,3 +10,6 @@
 @using Riode.WebUI.Appcode.Application.BlogsModelu
 
 @using Riode.WebUI.Model.Entity.FormModels
+@using Riode.WebUI.Appcode.Application.QuestionModelu
+@using Riode.WebUI.Appcode.Application.OneCategoryModelu
+
