--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Blog
+﻿@model BlogsViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -23,9 +23,9 @@
                         Şəkil
                     </label>
                     <label class="image-input"
-                           data-imgurl="/uploads/images/blog/mask/@Model.ImagePati"
+                           data-imgurl="/uploads/images/blog/mask/@Model.imagepati"
                            for="file">
-                        <input type="hidden" name="fileTemp" value="@Model.ImagePati">
+                        <input type="hidden" name="fileTemp" value="@Model.imagepati">
                         <span>×</span>
                     </label>
                     <input name="file" id="file" type="file" accept="image/x-png,image/gif,image/jpeg">
@@ -36,11 +36,6 @@
                     <span asp-validation-for="Body" class="text-danger"></span>
                 </div>
 
-                <div class="form-group col-12>
-                    <label asp-for="PublishedDate"  class="control-label"></label>
-                    <input asp-for="PublishedDate" class="form-control" />
-                    <span asp-validation-for="PublishedDate" class="text-danger"></span>
-                </div>
                 <input type="hidden" asp-for="Id" />
 
 
