--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Riode.WebUI.Model.Entity.Blog>
+﻿@model PagedViewModel<Riode.WebUI.Model.Entity.Blog>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,11 +9,13 @@
 
 
 <h1 style="text-align:center">Blogs Index</h1>
-
+<div>
+    @Model.GetPagenation(Url, "index", "Admin")
+</div>
 <table class="table table-striped" border="1">
     <thead>
         <tr>
-           
+
             <th scope="col">Image</th>
             <th scope="col">Title</th>
             <th scope="col">PublishedDate</th>
@@ -29,11 +31,11 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Items)
         {
             <tr>
                 <th>
-                    <img width="50" height="50" class="img-fluid"  src="~/uploads/images/blog/mask/@item.ImagePati"/>
+                    <img width="50" height="50" class="img-fluid" src="~/uploads/images/blog/mask/@item.ImagePati" />
                 </th>
                 <td>@item.Title</td>
                 <td> @item.PublishedDate</td>
@@ -42,10 +44,78 @@
                     <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
 
 
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a class="btn btn-danger" onclick="remove(@item.Id, '@item.Title')">Delete</a>
                 </td>
 
             </tr>
         }
     </tbody>
 </table>
+
+
+@section addjs{
+
+    <script src="~/libs/sweetalert/sweetalert.min.js"></script>
+    <script src="~/libs/toastr.js/toastr.min.js"></script>
+
+
+    <script>
+
+        function remove(id, name) {
+
+            swal({
+                title: "Eminsiniz?",
+                text: `Testik etdiyiniz teqdirde  '${name}' sistemden  silinecek!`,
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                buttons: ["No", "Yes"]
+            }).then(
+                function (isConfirm) {
+                    if (isConfirm) {
+
+
+                        $.ajax({
+                            url: '@Url.Action("Delete")',
+                            type: 'POST',
+                            data: { id },
+                            contentType: 'application/x-www-form-urlencoded', // ne tip  gedecek?   2side model binding rolnu oynayir datani back gondermek ucun isdifade edilir  yeni back gonderilmeye xirmet edilir
+                            dataType: 'json',
+                    beforeSend: function () {
+                        console.log("sorgudan evvel")   // loadir acmaq
+
+                    },
+                    success: function (response) {   // sorgunun neticesi ugurlu olsa
+                        console.log(response)
+
+                        if (response.error == false) {
+
+                            toastr.success(response.Message, "Ugurludur");
+                            window.location.reload();
+
+                        } else {
+                            toastr.error(response.Message, "xeta");
+
+                        }
+                    },
+                            error: function (response) {   // sorgunun neticesi ugursuz olsa
+                                console.log(response)
+                    },
+
+
+                }).always(function () {
+                         console.log("sorgudan sonra")  //loadir baglamaq
+
+                });
+
+                    }
+                });
+        };
+    </script>
+}
+
+
+
+@section addcss{
+    <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
+}
