--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@model IEnumerable<Riode.WebUI.Model.Entity.OneCategory>
+﻿@model IEnumerable<OneCategory>
 
 @{
     ViewData["Title"] = "Index";
 }
+@*<div>
+    @Model.GetPagenation(Url, "index", "Admin")
+</div>*@
 
 <h1 style="text-align:center">Category  Layout</h1>
 
@@ -10,35 +13,35 @@
 <a class="btn btn-outline-success" asp-action="Create">Create</a>
 
 <table class="table  tree">
-    @foreach (var item in Model.Where(c=>c.ParentId==null)) 
+    @foreach (var item in Model.Where(c => c.ParentId == null))
     {
 
-       
 
-            <tr  class="treegrid-@item.Id box">
-                <td style="color:red">@item.Name</td>
+
+        <tr class="treegrid-@item.Id box">
+            <td style="color:red">@item.Name</td>
+            <td class="d-flex justify-content-end">
+
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+            </td>
+        </tr>
+
+        @foreach (var child in item.GetChilds())
+        {
+            <tr class="treegrid-@child.Id treegrid-parent-@child.ParentId box1">
+                <td>@child.Name</td>
                 <td class="d-flex justify-content-end">
 
-                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-
+                    <a class="btn btn-outline-warning" asp-action="edit" asp-route-id="@child.Id">Edit</a>
+                    <a class="btn btn-outline-info" asp-action="details" asp-route-id="@child.Id">details</a>
+                    <a class="btn btn-outline-danger" asp-action="delete" asp-route-id="@child.Id">delete</a>
                 </td>
             </tr>
-      
-            @foreach (var child in item.GetChilds())
-            {
-                <tr  class="treegrid-@child.Id treegrid-parent-@child.ParentId box1">
-                    <td>@child.Name</td>
-                    <td class="d-flex justify-content-end">
+        }
 
-                        <a class="btn btn-outline-warning" asp-action="edit" asp-route-id="@child.Id">Edit</a>
-                        <a class="btn btn-outline-info" asp-action="details" asp-route-id="@child.Id">details</a>
-                        <a class="btn btn-outline-danger" asp-action="delete" asp-route-id="@child.Id">delete</a>
-                    </td>
-                </tr>
-            }
-        
 
 
 
@@ -51,7 +54,7 @@
 @section addjs{
 
 
-    <script >
+    <script>
 
         $('.tree').treegrid();
         $('.box').removeClass("treegrid-expanded").addClass("treegrid-collapsed");
@@ -59,7 +62,7 @@
         $('.box1').css("display", "none")
         $('.box1 .treegrid-expander-collapsed ').css("background-image", "url(~/libs/jquery-treegrid/img/expand.png)")
 
-      
+
     </script>
 
 
