--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductSizes/Index.cshtml
@@ -1,67 +1,135 @@
 ﻿@model PagedViewModel<Riode.WebUI.Model.Entity.ProductSize>
-    
-        @{
-            ViewData["Title"] = "Index";
-        }
+
+@{
+    ViewData["Title"] = "Index";
+}
 
 <div>
     @Model.GetPagenation(Url, "index", "Admin")
 </div>
 
-        <div style="display:flex">
-            <h1>Product Size</h1>
+<div style="display:flex">
+    <h1>Product Size</h1>
 
 
-        </div>
-        <a style="margin-left:15px" class="btn btn-warning">Brands Count:@ViewBag.Count</a>
-        <div class="col-8">
-            <table class="table table-striped" border="1">
-                <thead>
-                    <tr>
-                        <th>Abbr</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">CreateData</th>
-                        <th>
-                            <a class="btn btn-success" asp-action="Create">
-                                <i class="fas fa-plus"></i>
-                                Create New
-                            </a>
+</div>
+<a style="margin-left:15px" class="btn btn-warning">Brands Count:@ViewBag.Count</a>
+<div class="col-8">
+    <table class="table table-striped" border="1">
+        <thead>
+            <tr>
+                <th>Abbr</th>
+                <th scope="col">Name</th>
+                <th scope="col">CreateData</th>
+                <th>
+                    <a class="btn btn-success" asp-action="Create">
+                        <i class="fas fa-plus"></i>
+                        Create New
+                    </a>
 
 
 
 
-                        </th>
+                </th>
 
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model.Items)
-                    {
-                        <tr>
-                            <th>@item.Abbr</th>
-                            <td>@item.Name</td>
-                            <td> @item.CreateData</td>
-                            <td>
-                                <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">
-                                    <i class="fas fa-pencil-alt"></i>
-                                    Edit
-                                </a>
-                                <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">
-                                    <i class="fas fa-eye"></i>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Items)
+            {
+                <tr>
+                    <th>@item.Abbr</th>
+                    <td>@item.Name</td>
+                    <td> @item.CreateData</td>
+                    <td>
+                        <a class="btn btn-outline-warning" asp-action="Edit" asp-route-id="@item.Id">
+                            <i class="fas fa-pencil-alt"></i>
+                            Edit
+                        </a>
+                        <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@item.Id">
+                            <i class="fas fa-eye"></i>
 
-                                    Details
-                                </a>
+                            Details
+                        </a>
 
 
-                                <a class="btn btn-outline-danger" asp-action="Delete" asp-route-id="@item.Id">
-                                    <i class="fas fa-trash-alt"></i>
+                        <a class="btn btn-outline-danger"  onclick="remove(@item.Id, '@item.Name')" >
+                            <i class="fas fa-trash-alt"></i>
 
-                                    Delete
-                                </a>
-                            </td>
+                            Delete
+                        </a>
+                    </td>
 
-                        </tr>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
+
+
+@section addjs{
+
+    <script src="~/libs/sweetalert/sweetalert.min.js"></script>
+    <script src="~/libs/toastr.js/toastr.min.js"></script>
+
+
+    <script>
+
+        function remove(id, name) {
+
+            swal({
+                title: "Eminsiniz?",
+                text: `Testik etdiyiniz teqdirde  '${name}' sistemden  silinecek!`,
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                buttons: ["No", "Yes"]
+            }).then(
+                function (isConfirm) {
+                    if (isConfirm) {
+
+
+                        $.ajax({
+                            url: '@Url.Action("Delete")',
+                            type: 'POST',
+                            data: { id },
+                            contentType: 'application/x-www-form-urlencoded', // ne tip  gedecek?   2side model binding rolnu oynayir datani back gondermek ucun isdifade edilir  yeni back gonderilmeye xirmet edilir
+                            dataType: 'json',
+                    beforeSend: function () {
+                        console.log("sorgudan evvel")   // loadir acmaq
+
+                    },
+                    success: function (response) {   // sorgunun neticesi ugurlu olsa
+                        console.log(response)
+
+                        if (response.error == false) {
+
+                            toastr.success(response.Message, "Ugurludur");
+                            window.location.reload();
+
+                        } else {
+                            toastr.error(response.Message, "xeta");
+
+                        }
+                    },
+                            error: function (response) {   // sorgunun neticesi ugursuz olsa
+                                console.log(response)
+                    },
+
+
+                }).always(function () {
+                         console.log("sorgudan sonra")  //loadir baglamaq
+
+                });
+
                     }
-                </tbody>
-            </table>
-        </div>
+                });
+        };
+    </script>
+}
+
+
+
+@section addcss{
+    <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
+}
