Admin Membershib Applaied

--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -12,4 +12,4 @@
 @using Riode.WebUI.Model.Entity.FormModels
 @using Riode.WebUI.Appcode.Application.QuestionModelu
 @using Riode.WebUI.Appcode.Application.OneCategoryModelu
-
+@using Riode.WebUI.Model.Entity.Membership
