--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -202,6 +202,16 @@
                     </div>
                 </a>
             </li>
+            <li class="">
+                <a asp-controller="Users" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>Users</span>
+                    </div>
+                </a>
+            </li>  
 
 
 
