Beside bezdim eeeeeeeee

--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -23,9 +23,9 @@
                         Şəkil
                     </label>
                     <label class="image-input"
-                           data-imgurl="/uploads/images/blog/mask/@Model.imagepati"
+                           data-imgurl="/uploads/images/blog/mask/@Model.fileTemp"
                            for="file">
-                        <input type="hidden" name="fileTemp" value="@Model.imagepati">
+                        <input type="hidden" name="fileTemp" value="@Model.file">
                         <span>×</span>
                     </label>
                     <input name="file" id="file" type="file" accept="image/x-png,image/gif,image/jpeg">
