--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,3 +13,4 @@
 @using Riode.WebUI.Appcode.Application.QuestionModelu
 @using Riode.WebUI.Appcode.Application.OneCategoryModelu
 @using Riode.WebUI.Model.Entity.Membership
+@using Riode.WebUI.Appcode.Application.ProductColorModelu
