--- a/HomeWork-WebUI/Riode.WebUI/Views/Home/Contact.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Home/Contact.cshtml
@@ -219,7 +219,7 @@
                 type: 'POST',
                 data: formData,
                 contentType: false,
-                processData: false,
+                processData: false,   //EGER FORM DATA AJAX FORMDATA KIMI GELIRSE FALSE
                 dataType: 'json',
                 beforeSend: function (gelenData) {
                     console.log("before sending");
