--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductColors/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/ProductColors/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riode.WebUI.Model.Entity.ProductColor
+﻿@model ColorViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -22,32 +22,8 @@
                 <input asp-for="SkuCode" class="form-control" />
                 <span asp-validation-for="SkuCode" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="description" class="control-label"></label>
-                <input asp-for="description" class="form-control" />
-                <span asp-validation-for="description" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreateByUserId" class="control-label"></label>
-                <input asp-for="CreateByUserId" class="form-control" />
-                <span asp-validation-for="CreateByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreateData" class="control-label"></label>
-                <input asp-for="CreateData" class="form-control" />
-                <span asp-validation-for="CreateData" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteByUserId" class="control-label"></label>
-                <input asp-for="DeleteByUserId" class="form-control" />
-                <span asp-validation-for="DeleteByUserId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DeleteData" class="control-label"></label>
-                <input asp-for="DeleteData" class="form-control" />
-                <span asp-validation-for="DeleteData" class="text-danger"></span>
-            </div>
+        
+           
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
