--- a/HomeWork-WebUI/Riode.WebUI/Views/MyAccount/Registir.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/MyAccount/Registir.cshtml
@@ -1,14 +1,13 @@
 ﻿@model RegisterFormModel
 @{
     ViewData["Title"] = "Registir";
-    Layout = null;
 }
 
 
 
 
 
-<form method="post" class="pt-3">
+@*<form method="post" class="pt-3">
     @ViewBag.ms
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group">
@@ -29,6 +28,113 @@
 
     <button type="submit">Registir</button>
     <a asp-controller="MyAccount" asp-action="Singin">Login ol ala </a>
-</form>
+</form>*@
 
 
+<nav class="breadcrumb-nav">
+    <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="demo1.html"><i class="d-icon-home"></i></a></li>
+            <li><a href="shop.html">Riode Shop</a></li>
+            <li>My Account</li>
+        </ul>
+    </div>
+</nav>
+<div class="page-content mt-6 pb-2 mb-10">
+    <div class="container">
+        <div class="login-popup">
+            <div class="form-box">
+                <div class="tab tab-nav-simple tab-nav-boxed form-tab">
+                    <ul class="nav nav-tabs nav-fill align-items-center border-no justify-content-center mb-5" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link  border-no lh-1 ls-normal" asp-controller="MyAccount" asp-action="Singin">Login</a>
+                        </li>
+                        <li class="delimiter">or</li>
+                        <li class="nav-item">
+                            <a class="nav-link border-no lh-1 ls-normal active" >Register</a>
+                        </li>
+                    </ul>
+                    @ViewBag.Ms
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="signin">
+                            <form method="post">
+                                <div class="form-group mb-3">
+                                    <input asp-for="Email"
+                                           class="form-control"
+                                           id="singin-email"
+                                           placeholder="Email*"
+                                           required />
+                                </div>
+                                <div class="form-group">
+                                    <input asp-for="UserName"
+                                           class="form-control"
+                                           id="singin-password"
+                                           placeholder="UserName *"
+                                           required />
+                                </div>
+                                <div class="form-group">
+                                    <input asp-for="Password"
+                                           class="form-control"
+                                           id="singin-password"
+                                           placeholder="Password *"
+                                           required />
+                                </div>
+                                <div class="form-footer">
+                                    <div class="form-checkbox">
+                                        <input type="checkbox" class="custom-checkbox" id="signin-remember"
+                                               name="signin-remember" />
+                                        <label class="form-control-label" for="signin-remember">
+                                            Remember
+                                            me
+                                        </label>
+                                    </div>
+                                    <a href="#" class="lost-link">Lost your password?</a>
+                                </div>
+                                <button class="btn btn-dark btn-block btn-rounded" type="submit">Registir</button>
+                            </form>
+                            <div class="form-choice text-center">
+                                <label class="ls-m">or Login With</label>
+                                <div class="social-links">
+                                    <a href="#" class="social-link social-google fab fa-google border-no"></a>
+                                    <a href="#" class="social-link social-facebook fab fa-facebook-f border-no"></a>
+                                    <a href="#" class="social-link social-twitter fab fa-twitter border-no"></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="register">
+                            <form action="#">
+                                <div class="form-group">
+                                    <input type="email" class="form-control" id="register-email" name="register-email" placeholder="Your Email address *"
+                                           required />
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" class="form-control" id="register-password" name="register-password" placeholder="Password *"
+                                           required />
+                                </div>
+                                <div class="form-footer">
+                                    <div class="form-checkbox">
+                                        <input type="checkbox" class="custom-checkbox" id="register-agree" name="register-agree"
+                                               required />
+                                        <label class="form-control-label" for="register-agree">
+                                            I agree to the
+                                            privacy policy
+                                        </label>
+                                    </div>
+                                </div>
+                                <button class="btn btn-dark btn-block btn-rounded" type="submit">Register</button>
+                            </form>
+                            <div class="form-choice text-center">
+                                <label class="ls-m">or Register With</label>
+                                <div class="social-links">
+                                    <a href="#" class="social-link social-google fab fa-google border-no"></a>
+                                    <a href="#" class="social-link social-facebook fab fa-facebook-f border-no"></a>
+                                    <a href="#" class="social-link social-twitter fab fa-twitter border-no"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
