--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -208,10 +208,20 @@
                         <img src="~/uploads/images/menu-icon/7.svg" alt="">
                     </div>
                     <div class="nav_title">
-                        <span>Users</span>
+                        <span>@Sidebar.Users</span>
                     </div>
                 </a>
-            </li>  
+            </li>
+            <li class="">
+                <a asp-controller="Specification" asp-action="index" aria-expanded="false">
+                    <div class="nav_icon_small">
+                        <img src="~/uploads/images/menu-icon/7.svg" alt="">
+                    </div>
+                    <div class="nav_title">
+                        <span>@Sidebar.Specification</span>
+                    </div>
+                </a>
+            </li>
 
 
 
