--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Create.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model OneCategory
+﻿@model CategoryCreatCommand
 
 @{
     ViewData["Title"] = "Create";
@@ -17,9 +17,9 @@
 
 
         <div class="input-group mb-3">
-            <label class="col-sm-2 col-form-label" asp-for="Parent"></label>
+            <label class="col-sm-2 col-form-label" asp-for="ParendId"></label>
             <div class="col-sm-10">
-                <select asp-for="ParentId" asp-items="@ViewBag.ParentId" class="form-control select2">
+                <select asp-for="ParendId" asp-items="@ViewBag.ParentId" class="form-control select2">
                     <option selected disabled>secim</option>
                 </select>
             </div>
