--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Edit.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/OneCategories/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riode.WebUI.Model.Entity.OneCategory
+﻿@model CategoryViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -25,7 +25,7 @@
 
 
                         <div class="form-group row">
-                            <label class="col-sm-2 col-form-label" asp-for="Parent"></label>
+                            <label class="col-sm-2 col-form-label" asp-for="ParentId"></label>
                             <div class="col-sm-10">
                                 <select asp-for="ParentId" asp-items="@ViewBag.ParentId" class="form-control select2">
                                     <option selected disabled>secim</option>
