--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -14,3 +14,4 @@
 @using Riode.WebUI.Appcode.Application.OneCategoryModelu
 @using Riode.WebUI.Model.Entity.Membership
 @using Riode.WebUI.Appcode.Application.ProductColorModelu
+@using Riode.WebUI.Appcode.Application.SpecificationModelu
