--- a/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Details.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Areas/Admin/Views/Blogs/Details.cshtml
@@ -20,6 +20,11 @@
 
 
             <div class="col-8">
+
+                <div class="form-group col-12">
+                    <label asp-for="Title" class="control-label"></label>
+                    <p class="form-control">@Model.Title</p>
+                </div>
                 <div class="form-group col-12">
                     <label asp-for="Title" class="control-label"></label>
                     <p class="form-control">@Model.Title</p>
