--- a/HomeWork-WebUI/Riode.WebUI/Views/Blog/Index.cshtml
+++ b/HomeWork-WebUI/Riode.WebUI/Views/Blog/Index.cshtml
@@ -63,7 +63,9 @@
             </li>
             @for (int i = 1; i < ViewBag.PagesCaunt+1; i++)
             {
-                <li class="page-item active" aria-current="page"><a class="page-link" asp-controller="blog" asp-action="index" asp-route-page="@i">@i</a></li>
+                <li class="page-item active" aria-current="page">
+                <a class="page-link" asp-controller="blog" asp-action="index" asp-route-page="@i">@i</a>
+                </li>
 
             }
             <li class="page-item">
